Fixed drag and drop issue on mobile devices (#84) (#90)
* Fixed drag and drop issue on mobile devices (#84)

* Fixed weird CSS container formatting by changing min-height to use vh

---------

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body {
     -moz-osx-font-smoothing: grayscale; */
     background-color: theme('colors.background');
     font-family: theme('fontFamily.text');
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
